--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,45 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Podkova'
 }
+
+.wrapper {
+  background: url('./Group.png');
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  min-height: auto;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 5%;
+  height: 50px;
+}
+
+.links a {
+  text-decoration: none;
+  color: white;
+  letter-spacing: .1rem;
+  font-size: .9rem;
+  padding-left: 1rem;
+}
+
+.links a:hover {
+  text-decoration: underline;
+  color: #E2810F;
+  font-weight: bold;
+}
+
+.logo {
+  color: #E2810F;
+  letter-spacing: 0.3rem;
+}
+
+
 
 
