--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,7 @@
   background-position: center;
   background-size: cover;
   width: 100%;
-  height: 100vh;
-  min-height: auto;
+  height: auto;
 }
 
 .nav {
