--- a/src/Components/Pages/Exercises/index.css
+++ b/src/Components/Pages/Exercises/index.css
@@ -6,6 +6,8 @@
 }
 
 .exercise_card{
+  width: 90%;
+  height: 145px;
   background: white;
   display: flex;
   justify-content: space-between;
@@ -18,6 +20,7 @@
 
 .exercise-img {
   max-width: 50%;
+  height: 100%;
 }
 
 .exercise-checkbox{
@@ -51,6 +54,11 @@
   align-self: flex-end;
   background: #E2810F;
   font-weight: bold;
+}
+
+.error{
+  color: red;
+  font-size: 1.2rem;
 }
 
 @media (min-width: 800px){
