--- a/src/Components/Pages/Exercises/index.css
+++ b/src/Components/Pages/Exercises/index.css
@@ -49,9 +49,7 @@
   font-size: 1rem;
   border: none;
   border-radius: 5px;
-  width: 40%;
   margin: 1rem 0;
-  align-self: flex-end;
   background: #E2810F;
   font-weight: bold;
 }
@@ -82,6 +80,21 @@
   height: 1.4rem;
   width: 1.5rem !important;
   color: green;
+}
+
+.exercises-warning{
+  color: #eeee;
+  font-size: 1rem;
+  letter-spacing: .06rem;
+  line-height: 130%;
+  padding-left: 1rem;
+}
+
+.button-container{
+  padding: 0 1rem;
+  display: flex;
+  justify-content: space-between;
+
 }
 
 @media (min-width: 800px){
